Update YouTube link

--- a/index.html
+++ b/index.html
@@ -82,17 +82,29 @@
     </ul>
   </section>
 
-  <!-- PROJECTS -->
-  <section id="projects" class="container fade-in">
-    <h2>Projects & Links</h2>
-    <ul>
-      <li><a href="https://google.com" target="_blank" rel="noopener noreferrer">Google</a></li>
-      <li><a href="https://youtube.com" target="_blank" rel="noopener noreferrer">YouTube</a></li>
-      <li><a href="https://bible.com" target="_blank" rel="noopener noreferrer">Bible</a></li>
-      <li><a href="https://canva.com" target="_blank" rel="noopener noreferrer">Canva</a></li>
-      <li><a href="BrokenforDivineReshaping.pdf" target="_blank">Divine Reshaping</a></li>
-    </ul>
-  </section>
+<!-- PROJECTS -->
+<section id="projects" class="container fade-in">
+  <h2>Projects & Links</h2>
+  <ul>
+    <li><a href="https://google.com" target="_blank" rel="noopener noreferrer">Google</a></li>
+    <li><a href="https://www.youtube.com/@njokimuchemijinjo" target="_blank" rel="noopener noreferrer">My YouTube Channel</a></li>
+    <li><a href="https://bible.com" target="_blank" rel="noopener noreferrer">Bible</a></li>
+    <li><a href="https://canva.com" target="_blank" rel="noopener noreferrer">Canva</a></li>
+    <li><a href="BrokenforDivineReshaping.pdf" target="_blank">Divine Reshaping</a></li>
+  </ul>
+
+  <h3>Featured Video</h3>
+  <div class="video-container">
+    <iframe width="560" height="315" 
+      src="https://www.youtube.com/embed/5xGuc_wdY1w" 
+      title="YouTube video player" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+      allowfullscreen>
+    </iframe>
+  </div>
+</section>
+
 
   <!-- (Optional) GALLERY -->
 <section id="gallery" class="container">
