Update YouTube link

--- a/index.html
+++ b/index.html
@@ -93,16 +93,42 @@
     <li><a href="BrokenforDivineReshaping.pdf" target="_blank">Divine Reshaping</a></li>
   </ul>
 
-  <h3>Featured Video</h3>
+<!-- FEATURED VIDEOS -->
+<section id="videos" class="container fade-in">
+  <h2>Featured Videos</h2>
+  <div class="video-gallery">
+
   <div class="video-container">
     <iframe width="560" height="315" 
       src="https://www.youtube.com/embed/5xGuc_wdY1w" 
-      title="YouTube video player" 
+      title="Love poured out" 
       frameborder="0" 
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
       allowfullscreen>
     </iframe>
   </div>
+
+<div class="video-container">
+    <iframe width="560" height="315" 
+      src="https://www.youtube.com/embed/9QNIK4BxE9k" 
+      title="Who Am I" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+      allowfullscreen>
+    </iframe>
+  </div>
+
+<div class="video-container">
+    <iframe width="560" height="315" 
+      src="https://www.youtube.com/embed/B6Km7OnoSy0" 
+      title="My Redeemer Lives" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+      allowfullscreen>
+    </iframe>
+  </div>
+
+</div>
 </section>
 
 
