Update postermywall link

--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
     <li><a href="https://google.com" target="_blank" rel="noopener noreferrer">Google</a></li>
     <li><a href="https://www.youtube.com/@njokimuchemijinjo" target="_blank" rel="noopener noreferrer">My YouTube Channel</a></li>
     <li><a href="https://bible.com" target="_blank" rel="noopener noreferrer">Bible</a></li>
-    <li><a href="https://canva.com" target="_blank" rel="noopener noreferrer">Canva</a></li>
+    <li><a href="https://www.postermywall.com/index.php/posterbuilder/view/4e09726429c1e0e27a760820b3d6c2da/0" 
+           target="_blank" rel="noopener noreferrer">PosterMyWall Design</a></li>
     <li><a href="BrokenforDivineReshaping.pdf" target="_blank">Divine Reshaping</a></li>
   </ul>
 
