--- a/index.html
+++ b/index.html
@@ -86,12 +86,14 @@
 <section id="projects" class="container fade-in">
   <h2>Projects & Links</h2>
   <ul>
-    <li><a href="https://google.com" target="_blank" rel="noopener noreferrer">Google</a></li>
     <li><a href="https://www.youtube.com/@njokimuchemijinjo" target="_blank" rel="noopener noreferrer">My YouTube Channel</a></li>
     <li><a href="https://bible.com" target="_blank" rel="noopener noreferrer">Bible</a></li>
     <li><a href="https://www.postermywall.com/index.php/posterbuilder/view/4e09726429c1e0e27a760820b3d6c2da/0" 
            target="_blank" rel="noopener noreferrer">PosterMyWall Design</a></li>
     <li><a href="BrokenforDivineReshaping.pdf" target="_blank">Divine Reshaping</a></li>
+    <li><a href="https://www.canva.com/design/DAGCprHPa2k/kqB1YZXwbOQlVr8ryrCoXQ/edit?utm_content=DAGCprHPa2k&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" 
+     target="_blank" rel="noopener noreferrer">My Canva Design</a></li>
+    <li><a href="https://bible.com" target="_blank" rel="noopener noreferrer">Bible</a></li>
   </ul>
 
 <!-- FEATURED VIDEOS -->
