Update all changes

--- a/index.html
+++ b/index.html
@@ -101,35 +101,38 @@
   <h2>Featured Videos</h2>
   <div class="video-gallery">
 
-  <div class="video-container">
-    <iframe width="560" height="315" 
-      src="https://www.youtube.com/embed/5xGuc_wdY1w" 
-      title="Love poured out" 
-      frameborder="0" 
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-      allowfullscreen>
-    </iframe>
-  </div>
+    <div class="video-container">
+      <iframe 
+        src="https://www.youtube.com/embed/5xGuc_wdY1w" 
+        title="Love poured out" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        allowfullscreen>
+      </iframe>
+    </div>
 
-<div class="video-container">
-    <iframe width="560" height="315" 
-      src="https://www.youtube.com/embed/9QNIK4BxE9k" 
-      title="Who Am I" 
-      frameborder="0" 
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-      allowfullscreen>
-    </iframe>
-  </div>
+    <div class="video-container">
+      <iframe 
+        src="https://www.youtube.com/embed/9QNIK4BxE9k" 
+        title="Who Am I" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        allowfullscreen>
+      </iframe>
+    </div>
 
-<div class="video-container">
-    <iframe width="560" height="315" 
-      src="https://www.youtube.com/embed/B6Km7OnoSy0" 
-      title="My Redeemer Lives" 
-      frameborder="0" 
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-      allowfullscreen>
-    </iframe>
+    <div class="video-container">
+      <iframe 
+        src="https://www.youtube.com/embed/B6Km7OnoSy0" 
+        title="My Redeemer Lives" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        allowfullscreen>
+      </iframe>
+    </div>
+
   </div>
+</section>
 
 </div>
 </section>
